--- a/index.html
+++ b/index.html
@@ -514,6 +514,7 @@ export default App;
       name: &#34;匿名さん&#34;,
       time: &#34;2020/9/19 15:30&#34;,
     });
+    setMessageData(messageData);
     setMessage(&#34;&#34;);
   };
   //＊＊＊１ ここまで
@@ -570,6 +571,7 @@ export default App;
       name: &#34;匿名さん&#34;,
       time: &#34;2020/9/19 15:30&#34;,
     });
+    setMessageData(messageData);
     setMessage(&#34;&#34;);
   };</code></pre>
 
